
$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.13-1 (opened May 22, 2008)

	* merged mso revisions since r372: now similar as in devel branch
	at r389. 

	* merged 371: mite.xy data.

	* merged 368: method name to taxa2dist
	
	* merged r365: workaround to failure of weights.default in R 2.7.0
	when object had no weights.

	* merged r369: fixes bug in calculation of pair-wise permutation
	p-values for some circumstances in 'permutest.betadisper'.

	* merged r381: passes ... to 'lines' in 'lines.spantree'.
	
Version 1.13-0 (released May 21, 2008) 

	* Branched version 1.12-15 (rev 354) for a new release.

	* MOStest: removed from the release version. It seemed to work
	correctly, but strangely: needs more research.
	
Version 1.12-15 (closed May 14, 2008)

	* capscale: prints info on possible metaMDS transformations, and
	uses metaMDSdist transformed data for getting species scores
	(similarly as metaMDS recently does).

	* ordiTerminfo: does not give superfluous warnings if constrained
	ordination called without constraints and without data=, like
	capscale(x ~ 1).

	* graphical functions: Graphical functions that also pass '...' to
	non-graphical functions (such as scores) now accept non-graphical
	arguments without issuing an warning. These warnings were harmless
	but it is neater to stop them happening in the first place. This
	is facilitated by the new internal function ordiArgAbsorber().

	* MOStest: added fieller.MOStest for approximate confidence
	intervals of the location of the hump or pit. The method is based
	on Fieller's theorem following ter Braak & Looman (Vegatatio 65,
	3-11; 1986) and profile based condifence limits following Oksanen
	et al. (Ecology 82, 1191-1197; 2001).  Both are based on the code
	from the ESA Ecological Archives accompanying Oksanen et
	al. (Ecology 82, 1191-1197; 2001) and published in package optgrad
	(http://www.esapubs.org/archive/ecol/E082/015/default.htm), but