@@ -1,35 +1,41 @@
-"print.cca" <-
-  function (x, digits = max(3, getOption("digits") - 3), ...) 
+`print.cca` <-
+    function (x, digits = max(3, getOption("digits") - 3), ...) 
 {
-  cat("\nCall:\n")
-  cat(deparse(x$call), "\n\n")
-  chi <- rbind(x$tot.chi, x$pCCA$tot.chi, x$CCA$tot.chi, x$CA$tot.chi)
-  rnk <- rbind(NA, x$pCCA$rank, x$CCA$rank, x$CA$rank)
-  tbl <- cbind(chi, rnk)
-  tbl <- cbind(chi, rnk)
-  colnames(tbl) <- c("Inertia", "Rank")
-  rn <- c("Total", "Conditional", "Constrained", "Unconstrained")
-  rownames(tbl) <- rn[c(TRUE, !is.null(x$pCCA), !is.null(x$CCA), 
-                        !is.null(x$CA))]
-  printCoefmat(tbl, digits = digits, na.print = "")
-  cat("Inertia is", x$inertia, "\n")
-  if (!is.null(x$CCA$alias))
-    cat("Some constraints were aliased because they were collinear (redundant)\n")
-  if (!is.null(x$CCA)) {
-    cat("\nEigenvalues for constrained axes:\n")
-    print(x$CCA$eig, digits = digits, ...)
-  }
-  if (!is.null(x$CA)) {
-    ax.lim <- 8
-    ax.trig <- 16
-    cat("\nEigenvalues for unconstrained axes:\n")
-    if (x$CA$rank > ax.trig) {
-      print(x$CA$eig[1:ax.lim], digits = digits, ...)
-      cat("(Showed only", ax.lim, "of all", x$CA$rank, 
-          "unconstrained eigenvalues)\n")
+    if (inherits(x, "pcaiv")) {
+        stop("this is an ade4 object which vegan cannot handle")
     }
-    else print(x$CA$eig, digits = digits, ...)
-  }
-  cat("\n")
-  invisible(x)
+    if (x$CCA$rank < x$CCA$QR$rank)
+        warning("rank of constraints higher than the rank of dependent data\nvegan may not handle this -- wait for a bug fix release", call. = FALSE)
+    cat("\nCall:\n")
+    cat(deparse(x$call), "\n\n")
+    chi <- rbind(x$tot.chi, x$pCCA$tot.chi, x$CCA$tot.chi, x$CA$tot.chi)
+    rnk <- rbind(NA, x$pCCA$rank, x$CCA$rank, x$CA$rank)
+    tbl <- cbind(chi, rnk)
+    tbl <- cbind(chi, rnk)
+    colnames(tbl) <- c("Inertia", "Rank")
+    rn <- c("Total", "Conditional", "Constrained", "Unconstrained")
+    rownames(tbl) <- rn[c(TRUE, !is.null(x$pCCA), !is.null(x$CCA), 
+                          !is.null(x$CA))]
+    printCoefmat(tbl, digits = digits, na.print = "")
+    cat("Inertia is", x$inertia, "\n")
+    if (!is.null(x$CCA$alias))
+        cat("Some constraints were aliased because they were collinear (redundant)\n")
+    if (!is.null(x$CCA)) {
+        cat("\nEigenvalues for constrained axes:\n")
+        print(x$CCA$eig, digits = digits, ...)
+    }
+    if (!is.null(x$CA)) {
+        ax.lim <- 8
+        ax.trig <- 16
+        cat("\nEigenvalues for unconstrained axes:\n")
+        if (x$CA$rank > ax.trig) {
+            print(x$CA$eig[1:ax.lim], digits = digits, ...)
+            cat("(Showed only", ax.lim, "of all", x$CA$rank, 
+                "unconstrained eigenvalues)\n")
+        }
+        else print(x$CA$eig, digits = digits, ...)
+    }
+    cat("\n")
+    invisible(x)
 }
+
